tests/ui/missing/missing-main.rs
fn mian() { } //~ ERROR `main` function not found in crate `missing_main`
